# MV17

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  llms.txt  main.py  main_window.py  pyproject.toml  requirements.txt  robots.txt  run_sir_batch.py  sitemap.xml
.github/workflows/: indexnow.yml
edgelist/classical network/: football_list.txt  football_list_gcc.txt  football_list_gcc_clos.txt  football_list_gcc_pos.txt  football_list_gcc_tbet.txt  karate_gcc_pos.txt  us_air97_gcc.txt  us_air97_gcc_clos.txt  us_air97_gcc_pos.txt  us_air97_gcc_tbet.txt
edgelist/collaboration network/: ca_astroph_gcc.txt
edgelist/communication network/: email_enron_gcc.txt  email_urv_gcc.txt  email_urv_gcc_clos.txt  email_urv_gcc_pos.txt  email_urv_gcc_tbet.txt  wiki_vote_gcc.txt  wiki_vote_gcc_clos.txt  wiki_vote_gcc_pos.txt  wiki_vote_gcc_tbet.txt
edgelist/other network/: 2cliques_network_gcc.txt  2cliques_network_gcc_clos.txt  2cliques_network_gcc_pos.txt  2cliques_network_gcc_tbet.txt  as20000102_gcc.txt  as20000102_gcc_clos.txt  as20000102_gcc_pos.txt  as20000102_gcc_tbet.txt  daily_network_gcc.txt  daily_network_gcc_clos.txt  daily_network_gcc_pos.txt  daily_network_gcc_tbet.txt  facebook_combined_gcc.txt  facebook_combined_gcc_clos.txt  facebook_combined_gcc_pos.txt  facebook_combined_gcc_tbet.txt  k-core_network.txt  k-core_network_gcc.txt  k-core_network_gcc_clos.txt  k-core_network_gcc_pos.txt  k-core_network_gcc_tbet.txt  pgp_network_gcc.txt  pgp_network_gcc_clos.txt  pgp_network_gcc_pos.txt  pgp_network_gcc_tbet.txt  random_geometric_graph_1000_gcc.txt  random_geometric_graph_1000_gcc_clos.txt  (+2 more)
(+26 files in other folders)
