[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mv17"
version = "1.0.0"
description = "Network Spreader Analysis Tool — identify influential nodes using global diversity and local topology features"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Chung-Yuan Huang", email = "gscott@mail.cgu.edu.tw"},
    {name = "Yu-Hsiang Fu"},
    {name = "Chuen-Tsai Sun"},
]
keywords = ["complex networks", "influential spreaders", "k-shell decomposition", "node centrality", "SIR epidemic model", "network analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]

[project.urls]
Homepage = "https://github.com/canslab1/MV17"
Repository = "https://github.com/canslab1/MV17"
Issues = "https://github.com/canslab1/MV17/issues"

[project.scripts]
mv17 = "main:main"

[tool.setuptools.packages.find]
include = ["gui_app*"]
